--- a/css/style.css
+++ b/css/style.css
@@ -1537,6 +1537,14 @@ textarea:focus {
   outline: 0;
 }
 
+input[type=text] {
+  color: #fff;
+}
+
+textarea#massage {
+  color: #fff;
+}
+
 ul {
   list-style: outside none none;
   margin: 0;
@@ -2699,11 +2707,10 @@ span.flaticon-multiply i {
 .brand-section .brand-list .single-brand-box .brand-thumb {
   padding: 30px 60px;
   background: #212121;
-  width: 202px;
-  height: 127px;
 }
 .brand-section .brand-list .single-brand-box .brand-thumb img {
   width: 100%;
+  height: 80px;
 }
 
 .portfolio-section {
@@ -2728,6 +2735,7 @@ span.flaticon-multiply i {
 }
 .portfolio-section .single-portfolio-box {
   overflow: hidden;
+  margin-bottom: 30px;
 }
 .portfolio-section .single-portfolio-box .thumb {
   position: relative;
@@ -2835,6 +2843,33 @@ span.flaticon-multiply i {
   font-weight: 400;
   font-family: "Poppins", sans-serif;
 }
+.testimonial-section .testi-right .owl-nav {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.testimonial-section .testi-right .owl-nav .owl-prev {
+  position: relative;
+  top: 0px;
+  left: -70px;
+  color: #fff;
+  font-size: 19px;
+  transition: 0.5s;
+}
+.testimonial-section .testi-right .owl-nav .owl-prev:hover {
+  color: #009e66;
+}
+.testimonial-section .testi-right .owl-nav .owl-next {
+  position: relative;
+  top: -30px;
+  left: -35px;
+  color: #fff;
+  font-size: 19px;
+  transition: 0.5s;
+}
+.testimonial-section .testi-right .owl-nav .owl-next:hover {
+  color: #009e66;
+}
 .testimonial-section .testi-right .testi-single-box {
   padding: 40px 30px 30px 40px;
   background: #1b1b1b;
@@ -2887,6 +2922,345 @@ span.flaticon-multiply i {
   top: 30px;
   right: 30px;
 }
+
+.pricing-section {
+  background: #161616;
+}
+.pricing-section .single-pricing-box {
+  background: #202121;
+  padding: 0 40px 40px 40px;
+  margin-top: 20px;
+}
+.pricing-section .single-pricing-box.direct {
+  background: #009E66;
+  margin-top: 0;
+}
+.pricing-section .single-pricing-box.direct .pricing-top .top {
+  background: #008754;
+}
+.pricing-section .single-pricing-box.direct .pricing-top p {
+  color: #fff;
+}
+.pricing-section .single-pricing-box.direct .pricing-middle {
+  border-bottom: 0.04px solid rgba(255, 255, 255, 0.2);
+}
+.pricing-section .single-pricing-box.direct .pricing-middle p {
+  color: #fff;
+}
+.pricing-section .single-pricing-box.direct .pricing-bottom ul li {
+  color: #fff;
+}
+.pricing-section .single-pricing-box.direct .pricing-bottom ul li i {
+  background: #fff;
+  color: #009e66;
+}
+.pricing-section .single-pricing-box.direct .pricing-bottom a {
+  background: #fff;
+  color: rgb(0, 2, 41) !important;
+}
+.pricing-section .single-pricing-box .pricing-top {
+  text-align: center;
+}
+.pricing-section .single-pricing-box .pricing-top .top {
+  font-size: 14px;
+  line-height: 26px;
+  color: #ffffff;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  background: #009e66;
+  padding: 5px 30px;
+  display: inline-block;
+}
+.pricing-section .single-pricing-box .pricing-top h3 {
+  font-size: 22px;
+  line-height: 48px;
+  color: #ffffff;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 25px;
+}
+.pricing-section .single-pricing-box .pricing-top p {
+  font-size: 16px;
+  line-height: 48px;
+  color: #7c838e;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+}
+.pricing-section .single-pricing-box .pricing-middle {
+  text-align: center;
+  border-bottom: 0.04px solid rgba(255, 255, 255, 0.1019607843);
+  padding: 5px 0px 15px;
+}
+.pricing-section .single-pricing-box .pricing-middle h2 {
+  font-size: 46px;
+  line-height: 48px;
+  color: #ffffff;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+}
+.pricing-section .single-pricing-box .pricing-middle h2 span {
+  font-size: 22px;
+  line-height: 48px;
+  color: #ffffff;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  position: absolute;
+  top: -20px;
+  left: -25px;
+}
+.pricing-section .single-pricing-box .pricing-middle p {
+  font-size: 16px;
+  line-height: 48px;
+  color: #009e66;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  display: inline-block;
+}
+.pricing-section .single-pricing-box .pricing-bottom ul {
+  margin-top: 10px;
+}
+.pricing-section .single-pricing-box .pricing-bottom ul li {
+  font-size: 16px;
+  line-height: 48px;
+  color: #7c838e;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+}
+.pricing-section .single-pricing-box .pricing-bottom ul li i {
+  background: #009e66;
+  color: #fff;
+  height: 20px;
+  width: 20px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 12px;
+  margin-right: 10px;
+}
+.pricing-section .single-pricing-box .pricing-bottom .pricing-button {
+  margin-top: 10px;
+}
+.pricing-section .single-pricing-box .pricing-bottom .pricing-button a {
+  font-size: 16px;
+  line-height: 48px;
+  color: #ffffff;
+  font-weight: 500;
+  font-family: "Montserrat";
+  display: block;
+  text-align: center;
+  padding: 3px 0;
+  transition: 0.5s;
+  border: 1px solid #009e66;
+}
+.pricing-section .single-pricing-box:hover .pricing-button a {
+  background: #fff;
+  color: rgb(0, 2, 41);
+}
+
+.blog-section {
+  background: #101010;
+}
+.blog-section .single-blog-box {
+  overflow: hidden;
+}
+.blog-section .single-blog-box:hover .blog-thumb img {
+  transform: scale(1.2);
+}
+.blog-section .single-blog-box .blog-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.blog-section .single-blog-box .blog-thumb .button {
+  position: absolute;
+  left: -46px;
+  top: 110px;
+  transform: rotate(-90deg);
+}
+.blog-section .single-blog-box .blog-thumb .button a {
+  display: inline-block;
+  background: #009e66;
+  padding: 9px 20px 9px 50px;
+  line-height: 26px;
+  font-size: 16px;
+  text-transform: capitalize;
+  font-weight: 500;
+  color: #fff;
+  border-radius: 0;
+  position: relative;
+}
+.blog-section .single-blog-box .blog-thumb .button a::before {
+  position: absolute;
+  content: "";
+  left: 20px;
+  top: 50%;
+  height: 1px;
+  width: 20px;
+  background: #fff;
+}
+.blog-section .single-blog-box .blog-content {
+  background-color: rgba(255, 255, 255, 0.0705882353);
+  padding: 30px 30px;
+}
+.blog-section .single-blog-box .blog-content span {
+  font-size: 15px;
+  line-height: 28px;
+  color: #009e66;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+  padding-left: 30px;
+  position: relative;
+}
+.blog-section .single-blog-box .blog-content span::before {
+  position: absolute;
+  content: "";
+  top: 12px;
+  left: 0;
+  width: 20px;
+  height: 1px;
+  background-color: #009e66;
+}
+.blog-section .single-blog-box .blog-content a {
+  font-size: 22px;
+  line-height: 30px;
+  color: #ffffff;
+  font-weight: 600;
+  display: inline-block;
+  font-family: "Montserrat", sans-serif;
+  transition: 0.5s;
+  margin: 10px 0;
+}
+.blog-section .single-blog-box .blog-content a:hover {
+  color: #009e66;
+}
+.blog-section .single-blog-box .blog-content p {
+  font-size: 16px;
+  line-height: 28px;
+  color: #7c838e;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+}
+
+.contact-section {
+  background: #101010;
+}
+.contact-section .contact-left .thumb {
+  position: relative;
+  z-index: 2;
+}
+.contact-section .contact-left .thumb .clip {
+  position: absolute;
+  top: -10px;
+  z-index: -1;
+  left: -10px;
+}
+.contact-section .contact-left .thumb .shape-1 {
+  position: absolute;
+  top: -25px;
+  left: -30px;
+  z-index: -1;
+  animation: bounceleft 5s linear infinite;
+}
+.contact-section .contact-left .thumb .shape-2 {
+  position: absolute;
+  bottom: -12px;
+  right: 2px;
+  z-index: -1;
+  animation: bounceleft 5s linear infinite;
+}
+.contact-section .contact-right .content h4 {
+  font-size: 22px;
+  line-height: 26px;
+  color: #009e66;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+}
+.contact-section .contact-right .content h3 {
+  font-size: 32px;
+  color: #ffffff;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  margin: 20px 0;
+}
+.contact-section .contact-right .content p {
+  font-size: 16px;
+  line-height: 28px;
+  color: #fff;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 10px;
+}
+.contact-section .contact-right .content p span {
+  color: #7c838e;
+  margin-right: 10px;
+}
+.contact-section .contact-right .form-box {
+  margin-top: 15px;
+}
+.contact-section .contact-right .form-box input {
+  width: 100%;
+  height: 54px;
+  padding-left: 20px;
+  background: #1C1C1C;
+  border-radius: 3px;
+  transition: 0.5s;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.contact-section .contact-right .form-box textarea {
+  width: 100%;
+  padding-left: 20px;
+  background: #1C1C1C;
+  border-radius: 3px;
+  padding-top: 15px;
+  transition: 0.5s;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.contact-section .contact-right .slider-button a {
+  margin-top: 15px;
+}
+
+.footer-section {
+  background: #101010;
+  border-top: 1px solid #282828;
+}
+.footer-section .container-fluit {
+  padding: 0 50px;
+}
+.footer-section .container-fluit .footer-main {
+  border-top: 1px solid 0;
+}
+.footer-section .container-fluit .footer-main .footer-text {
+  text-align: center;
+}
+.footer-section .container-fluit .footer-main .footer-text p {
+  font-size: 16px;
+  line-height: 28px;
+  color: #ffffff;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+}
+.footer-section .container-fluit .footer-main .footer-social {
+  text-align: right;
+}
+.footer-section .container-fluit .footer-main .footer-social ul li {
+  display: inline-block;
+}
+.footer-section .container-fluit .footer-main .footer-social ul li a {
+  display: inline-block;
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  margin-right: 5px;
+  border-radius: 21px;
+  background-color: #009e66;
+  color: #fff;
+  text-align: center;
+}
+
 /*bounce-left-right-animation*/
 @keyframes bounceleft {
   0% {
@@ -2918,7 +3292,10 @@ span.flaticon-multiply i {
 .resume-section {
   background: #101010;
 }
-.resume-section .accordion-tabs .tabs .tab {
+.resume-section .accordion-tabs .tab .tabs {
+  margin-bottom: 40px;
+}
+.resume-section .accordion-tabs .tab .tabs li {
   display: inline-block;
   color: #fff;
   margin-right: 5px;
@@ -2927,52 +3304,46 @@ span.flaticon-multiply i {
   transition: 0.5s;
   cursor: pointer;
 }
-.resume-section .accordion-tabs .tabs .tab#tab-one-label {
-  background: #009e66;
-}
-.resume-section .accordion-tabs .tabs .tab:hover {
-  background: #009e66;
-}
-.resume-section .accordion-tabs .tabs #tab-one-tab-content {
+.resume-section .accordion-tabs .tab #tab-one-tab-content {
   position: relative;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content.tab-content {
+.resume-section .accordion-tabs .tab #tab-one-tab-content.tabs_item {
   padding: 20px 20px 20px 10px;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .shape-imgs {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .shape-imgs {
   position: absolute;
   left: -44px;
   top: 85px;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .shape-img {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .shape-img {
   right: -30px;
   position: absolute;
   top: 85px;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .box-top-upper {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .box-top-upper {
   text-align: left;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .box-top-upper h2 {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .box-top-upper h2 {
   font-size: 28px;
   color: #ffffff;
   font-weight: 600;
   margin-bottom: 30px;
   font-family: "Montserrat", sans-serif;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .box-top-upper .single-resume-box {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .box-top-upper .single-resume-box {
   background: #212121;
   padding: 30px 38px 30px;
   margin-bottom: 30px;
   position: relative;
   text-align: left;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .box-top-upper .single-resume-box .content h3 {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .box-top-upper .single-resume-box .content h3 {
   font-size: 22px;
   color: #ffffff;
   font-weight: 600;
   font-family: "Montserrat", sans-serif;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .box-top-upper .single-resume-box .content h6 {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .box-top-upper .single-resume-box .content h6 {
   font-size: 15px;
   line-height: 28px;
   color: #009e66;
@@ -2980,7 +3351,7 @@ span.flaticon-multiply i {
   font-family: "Poppins";
   margin-top: 4px;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .box-top-upper .single-resume-box .content p {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .box-top-upper .single-resume-box .content p {
   font-size: 16px;
   line-height: 28px;
   color: #7c838e;
@@ -2988,7 +3359,7 @@ span.flaticon-multiply i {
   font-family: "Poppins";
   margin-top: 14px;
 }
-.resume-section .accordion-tabs .tabs #tab-one-tab-content .box-top-upper .single-resume-box .content span {
+.resume-section .accordion-tabs .tab #tab-one-tab-content .box-top-upper .single-resume-box .content span {
   position: absolute;
   top: 35px;
   right: 35px;
@@ -2997,14 +3368,14 @@ span.flaticon-multiply i {
   background: #383838;
   padding: 1px 13px;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .box-top h2 {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .box-top h2 {
   font-size: 28px;
   color: #ffffff;
   font-weight: 600;
   font-family: "Montserrat", sans-serif;
   text-align: left;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .prossess-ber-plugin span {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .prossess-ber-plugin span {
   color: #fff;
   font-weight: 400;
   font-size: 18px;
@@ -3013,7 +3384,7 @@ span.flaticon-multiply i {
   text-align: left;
   display: inherit;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .barfiller {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .barfiller {
   /* width: 448px; */
   height: 5px;
   position: relative;
@@ -3022,10 +3393,10 @@ span.flaticon-multiply i {
   filter: drop-shadow(0px 10px 10px rgba(60, 115, 206, 0.2));
   background-color: #666666;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .barfiller:last-child {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .barfiller:last-child {
   margin-bottom: 0;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .barfiller .fill {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .barfiller .fill {
   display: block;
   position: relative;
   width: 0px;
@@ -3033,10 +3404,10 @@ span.flaticon-multiply i {
   background: #333;
   z-index: 1;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .barfiller .tipWrap {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .barfiller .tipWrap {
   display: none;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .barfiller .tip {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .barfiller .tip {
   font-size: 16px;
   left: 0px;
   border-radius: 2px;
@@ -3047,11 +3418,11 @@ span.flaticon-multiply i {
   padding: 2px 5px;
   background: #009e66;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content .stat-bar:nth-of-type(1) .stat-bar-rating {
+.resume-section .accordion-tabs .tab #tab-two-tab-content .stat-bar:nth-of-type(1) .stat-bar-rating {
   animation-delay: 0.25s;
   -webkit-animation-delay: 0.25s;
 }
-.resume-section .accordion-tabs .tabs #tab-two-tab-content span.fill {
+.resume-section .accordion-tabs .tab #tab-two-tab-content span.fill {
   background: #009e66 !important;
 }
 
@@ -3198,22 +3569,24 @@ span.flaticon-multiply i {
   position: relative;
   color: #fff;
   font-size: 46px;
+  display: inline-block;
   margin-top: 25px;
 }
 .section-title.two h3::before {
   position: absolute;
   content: "";
-  top: 28px;
-  right: 395px;
+  bottom: 5px;
+  right: -20px;
   height: 10px;
   width: 10px;
   background: #009e66;
 }
 .section-title.two span {
-  display: inline-block;
+  display: block;
   width: 3px;
   height: 45px;
   background-color: #009e66;
+  margin: auto;
   margin-top: 30px;
 }
 
@@ -3225,6 +3598,7 @@ span.flaticon-multiply i {
   background-color: rgba(255, 255, 255, 0.0705882353);
   overflow: hidden;
   transition: 0.5s;
+  margin-bottom: 30px;
 }
 .service-section .single-service-box .icon img {
   transition: 0.5s;
