--- a/sass/modiules/_difarent.scss
+++ b/sass/modiules/_difarent.scss
@@ -7,10 +7,9 @@
             .brand-thumb{
                 padding: 30px 60px;
                 background: #212121;
-                width: 202px;
-                height: 127px;
                 img{
                     width: 100%;
+                    height: 80px;
                 }
             }
         }
@@ -45,6 +44,7 @@
     }
     .single-portfolio-box{
         overflow: hidden;
+        margin-bottom: 30px;
         .thumb{
             position: relative;
             &::before{
@@ -166,6 +166,33 @@
         }
     }
     .testi-right{
+        .owl-nav {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            .owl-prev{
+                position: relative;
+                top: 0px;
+                left: -70px;
+                color: #fff;
+                font-size: 19px;
+                transition: .5s;
+                &:hover{
+                    color: $primary-color;
+                }
+            }
+            .owl-next{
+                position: relative;
+                top: -30px;
+                left: -35px;
+                color: #fff;
+                font-size: 19px;
+                transition: .5s;
+                &:hover{
+                    color: $primary-color;
+                }
+            }
+        }
         .testi-single-box{
             padding: 40px 30px 30px 40px;
             background: #1b1b1b;
@@ -219,7 +246,375 @@
                 top: 30px;
                 right: 30px;
             }
-            .owl-nav {
+        }
+    }
+}
+
+
+// =================pricng section
+.pricing-section{
+    background: #161616;
+    .single-pricing-box{
+        &.direct{
+            background: #009E66;
+            margin-top: 0;
+            .pricing-top{
+                .top{
+                    background: #008754;
+                }
+                p{
+                    color: $white;
+                }
+            }
+            .pricing-middle{
+                border-bottom: 0.04px solid rgba(255,255,255,0.2);
+                p{
+                    color: $white;
+                }
+            }
+            .pricing-bottom{
+                ul{
+                    li{
+                        color: $white;
+                        i{
+                            background: $white;
+                            color: $primary-color;
+                        }
+                    }
+                }
+                a{
+                    background: $white;
+                    color: $black !important;
+                }
+            }
+        }
+        background: #202121;
+        padding: 0 40px 40px 40px;
+        margin-top: 20px;
+        .pricing-top{
+            text-align: center;
+            .top{
+                font-size: 14px;
+                line-height: 26px;
+                color: #ffffff;
+                font-weight: 500;
+                font-family: "Montserrat", sans-serif;
+                background: $primary-color;
+                padding: 5px 30px;
+                display: inline-block;
+            }
+            h3{
+                font-size: 22px;
+                line-height: 48px;
+                color: #ffffff;
+                font-weight: 600;
+                font-family: "Montserrat", sans-serif;
+                margin-top: 25px;
+            }
+            p{
+                font-size: 16px;
+                line-height: 48px;
+                color: #7c838e;
+                font-weight: 400;
+                font-family: "Montserrat", sans-serif;
+            }
+        }
+        .pricing-middle{
+            text-align: center;
+            border-bottom: .04px solid rgba(255,255,255,0.10196078431372549);
+            padding: 5px 0px 15px;
+            h2{
+                font-size: 46px;
+                line-height: 48px;
+                color: #ffffff;
+                font-weight: 700;
+                font-family: "Montserrat", sans-serif;
+                text-align: center;
+                display: inline-block;
+                position: relative;
+                span{
+                    font-size: 22px;
+                    line-height: 48px;
+                    color: #ffffff;
+                    font-weight: 600;
+                    font-family: "Montserrat", sans-serif;
+                    text-align: center;
+                    position: absolute;
+                    top: -20px;
+                    left: -25px;
+                }
+            }
+            p{
+                font-size: 16px;
+                line-height: 48px;
+                color: #009e66;
+                font-weight: 500;
+                font-family: "Montserrat", sans-serif;
+                text-align: center;
+                display: inline-block;
+            }
+        }
+        .pricing-bottom{
+            ul{
+                margin-top: 10px;
+                li{
+                    font-size: 16px;
+                    line-height: 48px;
+                    color: #7c838e;
+                    font-weight: 400;
+                    font-family: "Poppins", sans-serif;
+                    i{
+                        background: $primary-color;
+                        color: $white;
+                        height: 20px;
+                        width: 20px;
+                        line-height: 20px;
+                        text-align: center;
+                        border-radius: 50%;
+                        font-size: 12px;
+                        margin-right: 10px;
+                    }
+                }
+            }
+            .pricing-button{
+                margin-top: 10px;
+                a{
+                    font-size: 16px;
+                    line-height: 48px;
+                    color: #ffffff;
+                    font-weight: 500;
+                    font-family: "Montserrat";
+                    display: block;
+                    text-align: center;
+                    padding: 3px 0;
+                    transition: .5s;
+                    border: 1px solid $primary-color;
+                }
+            }
+        }
+        &:hover .pricing-button{
+            a{
+                background: $white;
+                color: $black;
+            }
+        }
+    }
+}
+
+
+// =================blog section
+.blog-section{
+    background: #101010;
+    .single-blog-box{
+        overflow: hidden;
+        &:hover .blog-thumb{
+            img{
+                transform: scale(1.2);
+            }
+        }
+        .blog-thumb{
+            position: relative;
+            overflow: hidden;
+            .button{
+                position: absolute;
+                left: -46px;
+                top: 110px;
+                transform: rotate(-90deg);
+                a{
+                    display: inline-block;
+                    background: #009e66;
+                    padding: 9px 20px 9px 50px;
+                    line-height: 26px;
+                    font-size: 16px;
+                    text-transform: capitalize;
+                    font-weight: 500;
+                    color: #fff;
+                    border-radius: 0;
+                    position: relative;
+                    &::before{
+                        position: absolute;
+                        content: '';
+                        left: 20px;
+                        top: 50%;
+                        height: 1px;
+                        width: 20px;
+                        background: #fff;
+                    }
+                }
+            }
+        }
+        .blog-content{
+            background-color: rgba(255,255,255,0.07058823529411765);
+            padding: 30px 30px;
+            span{
+                font-size: 15px;
+                line-height: 28px;
+                color: #009e66;
+                font-weight: 400;
+                font-family: "Poppins",sans-serif;
+                padding-left: 30px;
+                position: relative;
+                &::before{
+                    position: absolute;
+                    content: "";
+                    top: 12px;
+                    left: 0;
+                    width: 20px;
+                    height: 1px;
+                    background-color: #009e66;
+                }
+            }
+            a{
+                font-size: 22px;
+                line-height: 30px;
+                color: #ffffff;
+                font-weight: 600;
+                display: inline-block;
+                font-family: "Montserrat",sans-serif;
+                transition: .5s;
+                margin: 10px 0;
+                &:hover{
+                    color: $primary-color;
+                }
+            }
+            p{
+                font-size: 16px;
+                line-height: 28px;
+                color: #7c838e;
+                font-weight: 400;
+                font-family: "Poppins",sans-serif;
+            }
+        }
+    }
+}
+
+
+
+// ==================contact section
+.contact-section{
+    background: #101010;
+    .contact-left{
+        .thumb{
+            position: relative;
+            z-index: 2;
+            .clip{
+                position: absolute;
+                top: -10px;
+                z-index: -1;
+                left: -10px;
+            }
+            .shape-1 {
+                position: absolute;
+                top: -25px;
+                left: -30px;
+                z-index: -1;
+                animation: bounceleft 5s linear infinite;
+            }
+            .shape-2 {
+                position: absolute;
+                bottom: -12px;
+                right: 2px;
+                z-index: -1;
+                animation: bounceleft 5s linear infinite;
+            }
+        }
+    }
+    .contact-right{
+        .content{
+            h4{
+                font-size: 22px;
+                line-height: 26px;
+                color: #009e66;
+                font-weight: 500;
+                font-family: "Montserrat",sans-serif;
+            }
+            h3{
+                font-size: 32px;
+                color: #ffffff;
+                font-weight: 600;
+                font-family: "Montserrat",sans-serif;
+                margin: 20px 0;
+            }
+            p{
+                font-size: 16px;
+                line-height: 28px;
+                color: $white;
+                font-weight: 500;
+                font-family: "Poppins", sans-serif;
+                margin-bottom: 10px;
+                span{
+                    color: #7c838e;
+                    margin-right: 10px;
+                }
+            }
+        }
+        .form-box{
+            margin-top: 15px;
+            input{
+                width: 100%;
+                height: 54px;
+                padding-left: 20px;
+                background: #1C1C1C;
+                border-radius: 3px;
+                transition: .5s;
+                border: 1px solid rgba(255,255,255,0.1);
+            }
+            textarea{
+                width: 100%;
+                padding-left: 20px;
+                background: #1C1C1C;
+                border-radius: 3px;
+                padding-top: 15px;
+                transition: .5s;
+                border: 1px solid rgba(255,255,255,0.1);
+            }
+        }
+        .slider-button{
+            a{
+                margin-top: 15px;
+            }
+        }
+    }
+}
+
+
+
+// =============footer section
+.footer-section{
+    background: #101010;
+    border-top: 1px solid #282828;
+    .container-fluit{
+        padding: 0 50px;
+        .footer-main{
+            border-top: 1px solid red($color: #000000);
+            .footer-text{
+                text-align: center;
+                p{
+                    font-size: 16px;
+                    line-height: 28px;
+                    color: #ffffff;
+                    font-weight: 400;
+                    font-family: "Poppins",sans-serif;
+                }
+            }
+            .footer-social{
+                text-align: right;
+                ul{
+                    li{
+                        display: inline-block;
+                        a{
+                            display: inline-block;
+                            width: 42px;
+                            height: 42px;
+                            line-height: 42px;
+                            margin-right: 5px;
+                            border-radius: 21px;
+                            background-color: #009e66;
+                            color: $white;
+                            text-align: center;
+                        }
+                    }
+                }
             }
         }
     }
