--- a/sass/modiules/section-title/_other-code.scss
+++ b/sass/modiules/section-title/_other-code.scss
@@ -38,22 +38,24 @@
             position: relative;
             color: $white;
             font-size: 46px;
+            display: inline-block;
             margin-top: 25px;
             &::before{
                 position: absolute;
                 content: "";
-                top: 28px;
-                right: 395px;
+                bottom: 5px;
+                right: -20px;
                 height: 10px;
-                width: 10px;;
+                width: 10px;
                 background: $primary-color;
             }
         }
         span{
-            display: inline-block;
+            display: block;
             width: 3px;
             height: 45px;
             background-color: $primary-color;
+            margin: auto;
             margin-top: 30px;
         }
     }
