--- a/sass/modiules/service-section/_service-section.scss
+++ b/sass/modiules/service-section/_service-section.scss
@@ -5,6 +5,7 @@
         background-color: rgba(255,255,255,0.07058823529411765);
         overflow: hidden;
         transition: .5s;
+        margin-bottom: 30px;
         .icon{
             img{
                 transition: .5s;
