--- a/css/style.css
+++ b/css/style.css
@@ -3308,7 +3308,11 @@ span.flaticon-multiply i {
   position: relative;
 }
 .resume-section .accordion-tabs .tab #tab-one-tab-content.tabs_item {
+  display: none;
   padding: 20px 20px 20px 10px;
+}
+.resume-section .accordion-tabs .tab #tab-one-tab-content.tabs_item:first-child {
+  display:  block;
 }
 .resume-section .accordion-tabs .tab #tab-one-tab-content .shape-imgs {
   position: absolute;
