--- a/sass/modiules/_resume.scss
+++ b/sass/modiules/_resume.scss
@@ -15,8 +15,12 @@
                 }
             }
             #tab-one-tab-content{
-                &.tabs_item{
+                &.tabs_item {
+                    display: none;
                     padding: 20px 20px 20px 10px;
+                    &:first-child {
+                        display: block;
+                    }
                 }
                 position: relative;
                 .shape-imgs{
